--- a/Python Assignments/Python basic assignments/Assignment_1.ipynb
+++ b/Python Assignments/Python basic assignments/Assignment_1.ipynb
@@ -16,11 +16,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans.\n",
-    "(*,-,/,+) are the expressions and ('hello',-87.8,6) are the values."
+    "<br>\n",
+    "Ans.<br>\n",
+    "(*,-,/,+) are the expressions and ('hello',-87.8,6) are the values.<br>"
    ]
   },
   {
@@ -31,11 +32,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans.\n",
-    "String is a data type and always represented inside qoutes('') and varabile is an alias name for some memory location where we can store data of different data types."
+    "<br>\n",
+    "Ans.<br>\n",
+    "String is a data type and always represented inside qoutes('') and varabile is an alias name for some memory location where we can store data of different data types.<br>"
    ]
   },
   {
@@ -46,14 +48,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans.\n",
+    "<br>\n",
+    "Ans.<br>\n",
     "Integer(int) - which has numbers without any decimals. eg. 786,-789\n",
     "Float(float) - which has numbers with decimal values. eg. 89.7,-89.7\n",
     "String(str)  - which has charactes and represented inside qoutes. eg. 'asdfa','854959,dkd'\n",
-    "there are other types like list ,tuple,set,dictionary,boolean etc.."
+    "there are other types like list ,tuple,set,dictionary,boolean etc..<br>"
    ]
   },
   {
@@ -64,11 +67,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans.\n",
-    "expression is made up of variables and operators. It gives us the result according to the operations performed by the operators on the variables."
+    "<br>\n",
+    "Ans.<br>\n",
+    "expression is made up of variables and operators. It gives us the result according to the operations performed by the operators on the variables.<br>"
    ]
   },
   {
@@ -79,11 +83,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans.\n",
-    "Statement is a command something which we will not yield any new output is just assigns or get some data which is already present.eg. s = 'sujan'. but expression is as said in above question 4 made up of variables and operators. It gives us the result according to the operations performed by the operators on the variables."
+    "<br>\n",
+    "Ans.<br>\n",
+    "Statement is a command something which we will not yield any new output is just assigns or get some data which is already present.eg. s = 'sujan'. but expression is as said in above question 4 made up of variables and operators. It gives us the result according to the operations performed by the operators on the variables.<br>"
    ]
   },
   {
@@ -96,11 +101,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans.\n",
-    "22"
+    "<br>\n",
+    "Ans.<br>\n",
+    "22<br>"
    ]
   },
   {
@@ -113,11 +119,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans.\n",
-    "'spamspamspam'"
+    "<br>\n",
+    "Ans.<br>\n",
+    "'spamspamspam'<br>"
    ]
   },
   {
@@ -128,14 +135,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans.\n",
+    "<br>\n",
+    "Ans.<br>\n",
     "standard rules for naming in Python:\n",
     "1.Should begin with alphabets[A-Z or a-z] or (_) .\n",
     "2.Should not start with a number.\n",
-    "3.Cannot contain special charecters like (.), @ etc."
+    "3.Cannot contain special charecters like (.), @ etc.<br>"
    ]
   },
   {
@@ -146,13 +154,14 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans.\n",
+    "<br>\n",
+    "Ans.<br>\n",
     "integer - int()\n",
     "floating-point - float()\n",
-    "string - str()"
+    "string - str()<br>"
    ]
   },
   {
@@ -164,12 +173,13 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans.\n",
+    "<br>\n",
+    "Ans.<br>\n",
     "String and integer are different data types so we cannot concatenate them.\n",
-    "fix is : 'I have eaten ' + str(99) + ' burritos."
+    "fix is : 'I have eaten ' + str(99) + ' burritos.<br>"
    ]
   },
   {
